# DockerPractice

./: DockerPractice.cabal  notes.txt
app/: Main.hs
src/: .Database.hs.swp  API.hs  Database.hs  Schema.hs
test/: .Spec.hs.swp  Spec.hs  Utils.hs
