name:                DockerPractice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DockerPractice#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    API
    Database
    Schema
  build-depends:       
    base >= 4.7 && < 5
    , aeson
    , bytestring
    , hedis
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , servant-client
    , servant-server
    , transformers
    , text
    , warp
  default-language:    Haskell2010

executable DockerPractice-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DockerPractice
  default-language:    Haskell2010

test-suite DockerPractice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
    Utils
  main-is:             Spec.hs
  build-depends:       
    base
    , hspec
    , http-client
    , http-client-tls
    , monad-logger
    , mtl
    , servant-client
    , persistent-postgresql
    , DockerPractice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/DockerPractice
